Add exception and clean code